<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wk6_1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_email_address">Your email address</string>
    <string name="your_phone">Your phone</string>
    <string name="comments_and_feedback">Comments and feedback</string>

</resources>
